[gd_scene load_steps=10 format=3 uid="uid://cqswiih3najh4"]

[ext_resource type="Script" path="res://environment/level.gd" id="1_rvhqc"]
[ext_resource type="PackedScene" uid="uid://dpy68brsjfakd" path="res://objects/basic/room.tscn" id="1_xtyxy"]
[ext_resource type="PackedScene" uid="uid://gwxyfx265pk4" path="res://objects/basic/spawn.tscn" id="3_dc1wo"]
[ext_resource type="PackedScene" uid="uid://f0qwfq835sfr" path="res://objects/target/final_target.tscn" id="4_0yh6p"]
[ext_resource type="Script" path="res://environment/level_P/random_spawn.gd" id="4_a7nvs"]
[ext_resource type="PackedScene" uid="uid://cdsfgd324gdrk" path="res://objects/basic/reward.tscn" id="4_xdkto"]
[ext_resource type="Script" path="res://environment/level_P/random_target.gd" id="6_btu87"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rj2xv"]
size = Vector3(2, 0, 6)

[sub_resource type="BoxShape3D" id="BoxShape3D_r06sj"]
size = Vector3(4, 0, 6)

[node name="StartEZ" type="Node3D"]
script = ExtResource("1_rvhqc")
min_reward = 5.5
max_steps = 800

[node name="Room" parent="." instance=ExtResource("1_xtyxy")]

[node name="Reward" parent="." instance=ExtResource("4_xdkto")]

[node name="RandomSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
script = ExtResource("4_a7nvs")

[node name="Spawn" parent="RandomSpawn" instance=ExtResource("3_dc1wo")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1.74446)

[node name="Area" type="Area3D" parent="RandomSpawn"]

[node name="CollisionShapeSpawn" type="CollisionShape3D" parent="RandomSpawn/Area"]
shape = SubResource("BoxShape3D_rj2xv")

[node name="RandomTarget" type="Node3D" parent="."]
script = ExtResource("6_btu87")

[node name="FinalTarget" parent="RandomTarget" instance=ExtResource("4_0yh6p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)

[node name="Area" type="Area3D" parent="RandomTarget"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)
collision_layer = 2

[node name="CollisionShapeTarget" type="CollisionShape3D" parent="RandomTarget/Area"]
shape = SubResource("BoxShape3D_r06sj")

[connection signal="body_entered" from="RandomTarget/FinalTarget" to="RandomSpawn" method="_on_final_target_body_entered"]
[connection signal="body_entered" from="RandomTarget/FinalTarget" to="RandomTarget" method="_on_final_target_body_entered"]
